fb/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: filebrowser
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 3
  selector:
    deploymentconfig: filebrowser
  template:
    metadata:
      labels:
        deploymentconfig: filebrowser
    spec:
      containers:
      - image: filebrowser/filebrowser:latest
        name: filebrowser
        ports:
        - containerPort: 81
        volumeMounts:
        - mountPath: /srv
          name: filebrowser-volume-1
        volumes:
        - emptyDir: {}
          name: filebrowser-volume-1
