fb/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: filebrowser
  name: filebrowser
  namespace: filebrowser
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: filebrowser
